Project

General

Profile

Actions

Bug #7709

closed

constants on Float aren't documented

Bug #7709: constants on Float aren't documented

Added by tenderlovemaking (Aaron Patterson) over 13 years ago. Updated over 13 years ago.

Status:
Closed
Assignee:
Target version:
ruby -v:
ruby 2.0.0dev (2013-01-12 trunk 38788) [x86_64-darwin12.2.1]
Backport:
[ruby-core:51484]

Description

For example:

ri Float::INFINITY tells me there is nothing known about INFINITY. If you do ri Float it lists that constant, but there is no documentation.

Updated by zzak (zzak _) over 13 years ago Actions #1 [ruby-core:51485]

  • Category set to doc
  • Assignee set to zzak (zzak _)
  • Target version set to 2.0.0

Thanks Aaron!

Updated by zzak (zzak _) over 13 years ago Actions #2

  • Status changed from Open to Closed
  • % Done changed from 0 to 100

This issue was solved with changeset r39024.
Aaron, thank you for reporting this issue.
Your contribution to Ruby is greatly appreciated.
May Ruby be with you.


Actions

Also available in: PDF Atom