* numeric.c: Document Float constants [ruby-core:51484] [Bug #7709]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@39024 b2dd03c8-39d4-4d8f-98ff-823fe69b080e